--- a/app/src/main/res/layout/item_vh_recent_search.xml
+++ b/app/src/main/res/layout/item_vh_recent_search.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.AppCompatImageView
-            setRecentSearchIcon="@{}"
+            setRecentSearchIcon='@{""}'
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="@dimen/_6sdp"
@@ -56,7 +56,7 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/iconDelete"
-                setCloseIcon="@{}"
+                setCloseIcon='@{""}'
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="end"
