--- a/app/src/main/res/layout/item_vh_size_grid.xml
+++ b/app/src/main/res/layout/item_vh_size_grid.xml
@@ -94,6 +94,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/iv"
+                    app:dragging="@{dragging}"
                     app:adapter="@{baseAdapter}"
                     app:sizeVH="@{sizeGridVH}" />
 
