--- a/app/src/main/res/layout/activity_recycle_bin.xml
+++ b/app/src/main/res/layout/activity_recycle_bin.xml
@@ -36,7 +36,7 @@
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:theme="@style/myEditTextOutlineColor"
+                        android:theme="@style/myOutlineEditText"
                         android:visibility="gone"
                         app:endIconMode="clear_text"
                         app:placeholderText="@string/menu_search"
