--- a/app/src/main/res/layout/fragment_size_edit_text_no_suffix.xml
+++ b/app/src/main/res/layout/fragment_size_edit_text_no_suffix.xml
@@ -22,7 +22,7 @@
         android:layout_marginEnd="@dimen/_4sdp"
         android:layout_weight="1"
         android:hint="@{hint}"
-        android:theme="@style/myEditTextOutlineColor"
+        android:theme="@style/myOutlineEditText"
         app:errorTextAppearance="@style/myTextSize8sdp"
         app:hintTextAppearance="@style/myTextSize8sdp"
         app:shapeAppearance="@style/myEditTextCorner"
