--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -75,7 +75,7 @@
         <item name="android:textSize">@dimen/_12sdp</item>
     </style>
     <!--    edit text focused outline-->
-    <style name="myEditTextOutlineColor" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+    <style name="myOutlineEditText" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="colorPrimary">@color/black</item>
     </style>
     <!--    action bar title style-->
@@ -97,6 +97,10 @@
 
     <style name="myTextSize11sdp" parent="Widget.MaterialComponents.TextView">
         <item name="android:textSize">@dimen/_11sdp</item>
+    </style>
+
+    <style name="mySignInButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="fontFamily">@font/sc_dream5</item>
     </style>
 
     <attr name="rvBackground" format="color" />
