--- a/app/src/main/res/layout/fragment_sign_in_include_edit_text.xml
+++ b/app/src/main/res/layout/fragment_sign_in_include_edit_text.xml
@@ -1,44 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.leebeebeom.closetnote.ui.view.OutlinedTextInputLayout
-        android:id="@+id/emailLayout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/sign_in_email"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:startIconDrawable="@drawable/icon_email">
+    <data>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:inputType="textEmailAddress"
-            android:textSize="@dimen/_11sdp" />
-    </com.leebeebeom.closetnote.ui.view.OutlinedTextInputLayout>
+        <variable
+            name="emailLive"
+            type="androidx.lifecycle.MutableLiveData&lt;String&gt;" />
 
-    <com.leebeebeom.closetnote.ui.view.OutlinedTextInputLayout
-        android:id="@+id/passwordLayout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/sign_in_password"
-        app:endIconMode="password_toggle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/emailLayout"
-        app:startIconDrawable="@drawable/icon_key">
+        <variable
+            name="passwordLive"
+            type="androidx.lifecycle.MutableLiveData&lt;String&gt;" />
+    </data>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.leebeebeom.closetnote.ui.view.OutlinedTextInputLayout
+            android:id="@+id/emailLayout"
+            style="@style/myOutlineEditText"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:textSize="@dimen/_11sdp" />
-    </com.leebeebeom.closetnote.ui.view.OutlinedTextInputLayout>
+            android:hint="@string/sign_in_email"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:startIconDrawable="@drawable/icon_email">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <com.leebeebeom.closetnote.ui.view.CustomEditText
+                android:id="@+id/etEmail"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_44sdp"
+                android:inputType="textEmailAddress"
+                android:text="@={emailLive}" />
+        </com.leebeebeom.closetnote.ui.view.OutlinedTextInputLayout>
+
+        <com.leebeebeom.closetnote.ui.view.OutlinedTextInputLayout
+            android:id="@+id/passwordLayout"
+            style="@style/myOutlineEditText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/sign_in_password"
+            app:endIconMode="password_toggle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/emailLayout"
+            app:startIconDrawable="@drawable/icon_key">
+
+            <com.leebeebeom.closetnote.ui.view.CustomEditText
+                android:id="@+id/etPassword"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_44sdp"
+                android:inputType="textPassword"
+                android:text="@={passwordLive}" />
+        </com.leebeebeom.closetnote.ui.view.OutlinedTextInputLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
