--- a/app/src/main/res/layout/fragment_verification.xml
+++ b/app/src/main/res/layout/fragment_verification.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="verificationFragment"
-            type="com.leebeebeom.closetnote.ui.verification.VerificationFragment" />
+            type="com.leebeebeom.closetnote.ui.signin.verification.VerificationFragment" />
     </data>
 
     <com.leebeebeom.closetnote.ui.view.LockableScrollView
@@ -21,7 +21,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical"
-            tools:context=".ui.verification.VerificationFragment">
+            tools:context=".ui.signin.verification.VerificationFragment">
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv1"
@@ -42,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_4sdp"
-                android:onClick="@{() -> verificationFragment.openBrowser()}"
+                android:onClick="@{() -> verificationFragment.openMail()}"
                 android:text="@string/verification_verify"
                 android:textColor="?colorPrimary"
                 android:textSize="@dimen/_12sdp"
