메소드 명 변경

--- a/app/src/main/res/layout/fragment_send_reset_password_email.xml
+++ b/app/src/main/res/layout/fragment_send_reset_password_email.xml
@@ -35,7 +35,7 @@
             <com.leebeebeom.closetnote.ui.view.CustomButton
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/_36sdp"
-                android:onClick="@{() -> fragment.openBrowser()}"
+                android:onClick="@{() -> fragment.openMail()}"
                 android:text="@string/send_reset_password_email_lets_check"
                 android:textColor="?colorPrimary"
                 app:backgroundTint="?myColorControl"
