--- a/app/src/main/res/layout/fragment_send_reset_password_email.xml
+++ b/app/src/main/res/layout/fragment_send_reset_password_email.xml
@@ -25,9 +25,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:alpha="0.9"
+                android:layout_marginTop="@dimen/_40sdp"
                 android:text="@string/send_reset_password_email_please_check_email"
                 android:textSize="@dimen/_12sdp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
