레이아웃 완성

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,5 +86,15 @@
             app:backgroundTint="@color/white"
             app:fabCustomSize="@dimen/_24sdp"
             tools:ignore="ContentDescription" />
+
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true"
+            android:visibility="gone"
+            app:indicatorColor="?myColorControl" />
+
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
