패키지 변경

--- a/app/src/main/res/layout/fragment_send_reset_password_email.xml
+++ b/app/src/main/res/layout/fragment_send_reset_password_email.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="fragment"
-            type="com.leebeebeom.closetnote.ui.signin.sendrestapsswordemail.SendResetPasswordEmailFragment" />
+            type="com.leebeebeom.closetnote.ui.signin.resetpassword.sendrestapsswordemail.SendResetPasswordEmailFragment" />
     </data>
 
     <com.leebeebeom.closetnote.ui.view.LockableScrollView
@@ -18,7 +18,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".ui.signin.sendrestapsswordemail.SendResetPasswordEmailFragment">
+            tools:context=".ui.signin.resetpassword.sendrestapsswordemail.SendResetPasswordEmailFragment">
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tvSendEmail"
